# Agent-Flow

./: .env.example  .gitignore  AGENTS.md  README.md  demo.html  deploy.sh  docker-compose.yml  headroom_linkedin_post.md  ihaveadhd_linkedin_post.md  production.py  pyproject.toml  run_demo.py  today_linkedin_post.md
.alook/: agent_flow_company.json
.hermes/plans/: 2026-07-20_000345-agent-civilization-mvp.md  agent-builder-tool.md  autonomous-agent-network.md  dynamic-agent-creation.md  hermes-dynamic-agents.md  multi-agent-api-system.md  multi-agent-collaboration.md
agent_flow/: __init__.py  cli.py  config.py  domain.py  hermes.py  runtime.py
agent_flow/agents/: __init__.py  agent_brain.py  alook_integration.py  cli.py  collab_demo.py  communication.py  company_api.py  creativity.py  decisions.py  demo_scenarios.py  dreams.py  empathy.py  employee.py  environment.py  events.py  evolution.py  factory.py  hermes_auto_wire.py  hermes_cli_api.py  hermes_integration.py  hermes_learning_loop.py  hub.py  human_personality.py  human_society_api.py  hypercomputation.py  interactions.py  job_hunter.py  learning.py  (+23 more)
docker/: Dockerfile.api  Dockerfile.telegram  Dockerfile.ui  nginx.conf
docs/: ARCHITECTURE.md  AUTONOMY_LOG.md  EMPLOYEE_PROTOCOL.md  ENTERPRISE_READY.md  VISION.md  job_application_alalawdi.py
frontend/: next.config.ts  package-lock.json  package.json
plans/: 2026-07-23-company-control-room.md
scripts/: watchdog.py
tests/: test_cli.py  test_company_api.py  test_employee.py  test_hermes.py  test_living_verse.py  test_runtime.py  test_workflow_engine.py
(+56 files in other folders)
