[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-flow-company"
version = "0.1.0"
description = "Persistent runtime for an evidence-driven AI venture civilization"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Agent-Flow Contributors"}]
dependencies = []

[project.scripts]
agent-flow = "agent_flow.cli:main"

[tool.setuptools.packages.find]
include = ["agent_flow*"]
