[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-flow-company"
version = "0.2.0"
description = "Deterministic company control plane with Hermes Agent AI workers"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{name = "Agent-Flow Contributors"}]
dependencies = [
    "hermes-agent>=0.18.2",
]

[project.scripts]
agent-flow = "agent_flow.cli:main"

[tool.setuptools.packages.find]
include = ["agent_flow*"]
